--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-keras==2.7.0
-matplotlib==3.5.0
-numpy==1.23
-pandas==1.4.0
-scikit_learn==1.0.2
-seaborn==0.11.2
-streamlit
+keras>=3.0.0
+matplotlib>=3.7.0
+numpy>=1.26.0
+pandas>=2.0.0
+scikit-learn>=1.8.0
+seaborn>=0.13.0
+streamlit>=3.0.0
